Add theme-aware favicons and update head links

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gaia-lab-clone",
+  "name": "Pushpendra Dendroclimatology",
   "private": true,
   "version": "1.0.0",
   "type": "module",
